# UModSys

./: .gitignore
build-cp/_gen/: casefolding.pl  gen_msvc8.pm  gen_msvc9.pm  gen_msvc_xml.pm  gen_msvc_xmlt.pm  gen_options_depends_vs2005_2008.txt  gen_options_main_vs2005_2008.txt  opengl_gen.pm  opengl_gen_all.txt  update_versions.pl  util_crc32.pm  version-generator-bat.txt  versions.txt
build-cp/cmake/: CMakeLists.txt
build-cp/cmake/base/: CMakeLists.txt
build-cp/cmake/basesys/: CMakeLists.txt
build-cp/cmake/lib.3d/: CMakeLists.txt
build-cp/cmake/plugin.tests/: CMakeLists.txt
build-cp/gnu-make/: generate.sh
build-cp/gnuc_makefile/: Makefile.cygwin  Makefile.defines.inc  Makefile.dep-base.inc  Makefile.dep-lib2d.inc  Makefile.dep-lib3d.inc  make-cygwin-vc8.bat  remake-all-release.bat
build-cp/msvc8/: umodsys.sln  umodsys_Depends.sln
build-cp/msvc9/: generate.bat  umodsys_Depends.sln  ver-call.bat
data/: _temp  cache  debug.umstcl  debug0.umstcl  make-resources-unzip.sh  minecraft_textures.atlas  moduledb.conf-hdb  read-test.txt  run-debug-dbg.sh  run-debug.sh  run-release.sh  run-win32vc9_Release_Win32.bat  run-win32vc9_Release_x64.bat  test.json  test01.ums  test02.ums  test2.json  valgrind.sh  write-test-2.txt  write-test.txt
depends/TinyC/: CMakeLists.txt  Changelog  README  RELICENSING  TODO  coff.h  config.h  config.h.in  config.texi.in  conftest.c  elf.h  i386-asm.c  i386-asm.h  il-gen.c  tcc-doc.texi  tccasm.c  tccpp.c
docs/: 1.DafaultDataFormats.txt  1.ObjectsTree.txt  _progress.txt  conf-hdb.fileformat.txt  init-scripting.txt  lib3d-concept.txt  libnet.txt  module-so-information.txt  modules.txt  resources.txt  script-language.txt  script-language2.txt  std-dirs.txt  tl-classes.txt
include/umodsys/: stdbase.h  stdcommon.h  stdcore.h  stdmath3d.h
patch/lightning/: stdint.h  unistd.h
patch/luajit/: lj_err.c
src/base/: auto_version.h  c_main.cpp  so_main.cpp  umodsys.base.console.cpp  umodsys.base.debug.cpp  umodsys.base.module.cpp  umodsys.base.modulecontext.cpp  umodsys.base.moduleinfo.cpp  umodsys.base.moduleloader.cpp  umodsys.base.modulereg.cpp  umodsys.base.moduleregchain.cpp  umodsys.base.system.cpp  umodsys.c_main.cpp  version_library.h
src/basesys/: auto_version.h  umodsys.base.rcommon.h  umodsys.base.rconsole_std.h  umodsys.base.rmoduleloader.cpp  umodsys.base.rparameters.cpp  umodsys.base.rsystem.cpp  umodsys.base.rsystem.h  umodsys.base.rsystem_main.cpp  umodsys.basesys.rcommon.h  umodsys.basesys.rconsole_std.cpp  umodsys.basesys.rconsole_std.h  umodsys.basesys.rexec.cpp  umodsys.basesys.rexec.h  umodsys.basesys.rexec_sub.cpp  umodsys.basesys.rmemalloc.h  umodsys.basesys.rmodule.cpp  umodsys.basesys.rmodule.h  umodsys.basesys.rmodulelib.cpp  umodsys.basesys.rmodulelibso.cpp  umodsys.basesys.rmodulelibthis.cpp  umodsys.basesys.rmoduleloader.cpp  umodsys.basesys.rparameters.cpp  umodsys.basesys.rparameters.h  umodsys.basesys.rsystem.cpp  umodsys.basesys.rsystem.h  umodsys.basesys.rsystem_exec.cpp  version_library.h  (+4 more)
(+902 files in other folders)
